# bqflow

./: .flake8  .gitignore  README.md  pyproject.toml
sample/: arguments.yml  build_and_scrap.yaml  complex.yaml  dag.yaml  steps.yaml
sql/: analystic.sql  error.sql  param_array.sql  param_scalar.sql  param_struct.sql  test.sql
src/bqflow/: __init__.py  _helper.py  client.py  fields.py  load.py  main.py  parameter.py  procon.py  report.py  task.py  tracer.py
tests/: test_bqflow.py
